hopefully one of the last commits

--- a/presentation.html
+++ b/presentation.html
@@ -37,7 +37,7 @@
     <div id="social-ui" class="hidden">
         <div class="social-buttons">
             <div class="social-btn" id="likeBtn">
-                <div class="social-icon">❤</div>
+                <div class="social-icon">♥</div>
                 <div class="social-count" id="likeCount">45.2K</div>
             </div>
             
@@ -52,7 +52,7 @@
             </div>
             
             <div class="social-btn" id="bookmarkBtn">
-                <div class="social-icon">💾</div>
+                <div class="social-icon">⬇</div>
                 <div class="social-count">Save</div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="creator-avatar">SC</div>
         <div class="creator-details">
             <div class="creator-name" id="creatorName">@scrolladdict</div>
-            <div class="creator-caption">Just another scroll 🔄 #fyp</div>
+            <div class="creator-caption">Just another scroll #fyp</div>
         </div>
     </div>
 
