--- a/vr.html
+++ b/vr.html
@@ -59,32 +59,22 @@
             
             <!-- VR Navigation Bar (top, follows head) -->
             <a-entity id="vrNavSimulation" position="0 0.6 -1.5">
-                <!-- Background box - wider to accommodate side-by-side layout -->
+                <!-- Background box - compact -->
                 <a-box 
                     color="#000000" 
                     opacity="0.75" 
-                    width="1.4" 
-                    height="0.24"
+                    width="1.0" 
+                    height="0.2"
                     depth="0.02"
                     position="0 0 0"
                     material="transparent: true">
                 </a-box>
-                <!-- Arrow on the left -->
-                <a-text 
-                    id="vrNavArrow"
-                    value="→" 
-                    position="-0.5 0 0.02"
-                    align="center"
-                    color="#4ade80"
-                    width="2"
-                    scale="0.4 0.4 0.4">
-                </a-text>
-                <!-- Direction text on the right -->
+                <!-- Direction text centered -->
                 <a-text 
                     id="vrNavText"
                     value="Turn right" 
-                    position="0.1 0 0.02"
-                    align="left"
+                    position="0 0 0.02"
+                    align="center"
                     color="#ffffff"
                     width="2"
                     scale="0.32 0.32 0.32">
