trying to resize box in VR

--- a/vr.html
+++ b/vr.html
@@ -73,7 +73,7 @@
                 <a-text 
                     id="vrNavText"
                     value="Turn right" 
-                    position="0 0 0.02"
+                    position="0 -0.02 0.02"
                     align="center"
                     color="#ffffff"
                     width="2"
@@ -86,12 +86,13 @@
                 <!-- Background box - darker and more prominent -->
                 <a-box 
                     color="#0a0a0a" 
-                    opacity="0.92" 
-                    width="1.6" 
+                    opacity="0.75" 
+                    width="0.8" 
                     height="0.6"
                     depth="0.02"
                     position="0 0 0"
-                    material="transparent: true">
+                    material="transparent: true"
+                    geometry="primitive: box; radius: 10">
                 </a-box>
                 <!-- Time text - larger and more prominent -->
                 <a-text 
